functional web for 41OPS

--- a/src/app/components/collapsible-list/collapsible-list.component.css
+++ b/src/app/components/collapsible-list/collapsible-list.component.css
@@ -122,6 +122,8 @@
     font-weight: 500;
     color: #ffffff;
     line-height: 1.7;
+    white-space: pre-wrap;
+    /* Preserve line breaks */
 }
 
 /* --- Image Content --- */
