--- a/src/app/components/part-stw/part-stw.component.html
+++ b/src/app/components/part-stw/part-stw.component.html
@@ -4,7 +4,7 @@
             <h2 [innerHTML]="titleHtml()" class="stw-title" [style.font-family]="titleFont()"></h2>
         </div>
         <div class="desc-col">
-            <p class="stw-description" [style.font-family]="descriptionFont()">{{ description() }}</p>
+            <div class="stw-description" [style.font-family]="descriptionFont()" [innerHTML]="description()"></div>
         </div>
     </div>
 </section>
