--- a/src/app/components/spacebar-button/spacebar_button_styles.css
+++ b/src/app/components/spacebar-button/spacebar_button_styles.css
@@ -85,9 +85,6 @@
 
 @media screen and (max-width: 768px) {
     :host {
-        right: 1rem;
-        bottom: 1rem;
-        transform: scale(0.8);
-        transform-origin: bottom right;
+        display: none;
     }
 }
