translation and more changes

--- a/src/app/components/cookie-banner/cookie-banner.component.html
+++ b/src/app/components/cookie-banner/cookie-banner.component.html
@@ -1,10 +1,10 @@
 <div class="cookie-banner" [class.hidden]="!isVisible()">
     <div class="cookie-content">
         <p class="cookie-text">
-            We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.
+            {{ ts.t().cookieBanner.text }}
         </p>
         <div class="cookie-actions">
-            <button class="cookie-btn accept" (click)="acceptCookies()">Accept</button>
+            <button class="cookie-btn accept" (click)="acceptCookies()">{{ ts.t().cookieBanner.accept }}</button>
         </div>
     </div>
 </div>
